# engine_search

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp
tests/: gTestIndex.h  gTestSearch.h  mainTest.cpp
